# ITops-Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh  start.sh  ui_streamlit.py
checklists/: incident.yaml
src/: build_index.py  checklists.py  chunking.py  common.py  incident_helper.py  loaders.py  mcp_server.py  ollama_client.py  rag_api.py  rag_core.py  ui_entry.py
