[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-rag-agent"
version = "0.1.0"
description = "Local policy & procedure RAG agent with Ollama + ChromaDB + FastAPI + MCP"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pypdf",
    "python-docx",
    "docx2txt",
    "chromadb",
    "tiktoken",
    "requests",
    "httpx",
    "pyyaml",
    "streamlit",
    "mcp",
]

[project.scripts]
rag-index  = "src.build_index:main"
rag-serve  = "src.rag_api:serve"
rag-mcp    = "src.mcp_server:main"
rag-ui     = "src.ui_entry:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["src*"]
